# norsk-lemma

./: .env.example  .gitignore  LICENSE  NOTICE  README.md  pipeline.py  pyproject.toml  ruff.toml
.github/workflows/: release-archive.yml
data/: README.md
data/lemma/: 1.json  10.json  100.json  1000.json  10000.json  10001.json  10002.json  10003.json  100032.json  10004.json  10005.json  100058.json  10006.json  100064.json  100068.json  10007.json  100074.json  100076.json  100078.json  10008.json  100080.json  100082.json  100084.json  10009.json  100094.json  100098.json  1001.json  10010.json  100114.json  10012.json  100120.json  10013.json  10015.json  100150.json  10016.json  100160.json  100164.json  10017.json  100170.json  100178.json  (+92955 more)
docs/: audio-bakeoff-lemmas.tsv  audio-strategy.md  data-sources.md  pronunciation-pipeline.md  schema.md
lemma/: 1.json  10.json  100.json  1000.json  10000.json  10001.json  10002.json  10003.json  100032.json  10004.json  10005.json  100058.json  10006.json  100064.json  100068.json  10007.json  100074.json  100076.json  100078.json  10008.json  100080.json  100082.json  100084.json  10009.json  100094.json  100098.json  1001.json  10010.json  100114.json  10012.json  100120.json  10013.json  10015.json  100150.json  10016.json  100160.json  100164.json  10017.json  100170.json  100178.json  (+95708 more)
scripts/: README.md  enrich_pronunciation.py  generate_audio.py  ordbokene_concepts_bm.json  release.sh  test_translate.py  translate.py  upload_audio.py
scripts/ordbokene/: __init__.py  audio.py  build.py  cli.py  client.py  (+8 more)
(+93701 files in other folders)
