[project]
name = "norsk-lemma"
version = "1.2.0"
description = "Pipeline for generating English lemma glosses from Ordbokene Bokmål data."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "nb-g2p>=2.1",
    "python-dotenv>=1.0",
    "requests>=2.31",
    "tqdm>=4.66",
]

[tool.uv]
package = false

[dependency-groups]
audio = [
    "google-cloud-texttospeech>=2.16",
    "google-genai>=2.10.0",
    "boto3>=1.34",
]
dev = [
    "pre-commit>=4.0",
    "pytest>=9.0",
    "ruff>=0.14",
]
